<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/user_name_label"
        android:text="@string/enter_a_username"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/register_user_name"
        android:hint="@string/example_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/password_label"
        android:text="@string/enter_a_password"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/register_password"
        android:hint="@string/example_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_btn"
        android:text="@string/register_label"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>