<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:text="@string/new_book_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/new_book_title"
            android:layout_width="150dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/new_book_author_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/new_book_author"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:text="@string/enter_genre_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/new_book_genre"
            android:layout_width="150dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/new_book_btn"
        android:text="@string/add_new_book_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>