<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/user_name_label"
        android:text="@string/enter_your_username_label"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/password_label"
        android:text="@string/enter_your_password_label"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:text="@string/login_label"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>